Fix display of image failed display on mobile.

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -737,6 +737,7 @@ blockquote {
         display: none;
         width: 100%;
         height: 100%;
+        background: #fff;
     }
 
     /* || MODAL styles */
@@ -1264,6 +1265,11 @@ blockquote {
 
     .book-section-comparison-load-failed {
         width: auto;
+    }
+
+    .subsection-modal-container .book-section-comparison-load-failed {
+        width: 100%;
+        max-height: 50vh;
     }
 
     /* || MODAL styles */
